2014-02-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/qtterminal/qt_term.cpp (qt_waitforinput):  Avoid unnecessary
	timeouts on Windows when only checking for mouse interaction. These
	would slow down drawing considerably in some cases.

2014-02-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/qt_term.cpp(qt_flushOutBuffer):
	Check for valid socket before flushing.

	* configure.in:  --with-qt=qt5 forces qt5 even if auto-detection
	would otherwise choose qt4.

2014-02-23  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/caca.trm:  No longer expect the name of the backend driver to be
	specified in quotes. Fix some initialization issues found by the VS11
	code analysis tool.

	src/command.c:  Fix another case of conditional compilation with
	USE_MOUSE on Windows.

	config/mingw/Makefile:  gcc's -pipe option seems to speed up
	compilation with MinGW considerably.

2014-02-18  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in: The interactive terminals wxt, qt, etc, no longer build
	correctly if mousing support is not configured.  So force mouse support
	if any of these terminals are selected during configuration.

2014-02-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (timed_pause): Fix conditional compilation when
	./configure --disable-mouse

2014-02-16  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/qtterminal/qt_term.cpp (qt_waitforinput):  Safeguard the test
	of the return value of MsgWaitForMultipleObjects against accidental
	matches when it returns WAIT_FAILED==-1. Disable the recursion test
	for now as it seems no longer necessary.

2014-02-16  Jérôme Lodewyck  <lodewyck@users.sourceforge.net>

	* src/qtterminal/QtGnuplotWidget.*: Correctly handle the size of the
	plot window on the first plot and after the plot window has been closed

2014-02-15  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/qtterminal/qt_term.cpp (qt_flushOutBuffer):  Avoid dead-locking